<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/hint_author"
                tools:text="Author"/>

            <EditText
                android:id="@+id/inputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"/>

            <EditText
                android:id="@+id/inputContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_content"
                android:minHeight="112dp"
                android:gravity="top"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
        


</FrameLayout>